[project]
name = "devsecscan"
version = "0.1.0"
description = "A developer security platform that prevents secret leakage."
authors = [{ name = "Senior Security Engineer" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "gitpython>=3.1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
devsecscan = "devsecscan.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
